--- a/WebStore/WebStore.csproj
+++ b/WebStore/WebStore.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WebStore.DAL\WebStore.DAL.csproj" />
     <ProjectReference Include="..\WebStore.Domian\WebStore.Domian.csproj" />
   </ItemGroup>
 
