Много чего неделал

--- a/WebStore/WebStore.csproj
+++ b/WebStore/WebStore.csproj
@@ -22,6 +22,11 @@
     <ProjectReference Include="..\WebStore.Domian\WebStore.Domian.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
