Класс базового клиента

--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -10,5 +10,6 @@
     }
   },
   "CustomGreetings": "Hello from my first ASP.Net Core App!!!",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebApiUrl": "http://localhost:5001" 
 }
