--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+[Ll]ogs/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -344,3 +345,4 @@ healthchecksdb
 /UI/WebStore/wwwroot/js/site.min.js.gz
 /UI/WebStore/wwwroot/js/site.min.js
 /UI/WebStore/wwwroot/js/site.js
+/UI/WebStore/Logs/
