Добавление библиотеки Log4net и отключение её. Добавление logger - а в контроллер Account

--- a/Services/WebStore.ServiceHosting/WebStore.ServiceHosting.csproj
+++ b/Services/WebStore.ServiceHosting/WebStore.ServiceHosting.csproj
@@ -18,5 +18,9 @@
     <ProjectReference Include="..\WebStore.Services\WebStore.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Logs\" />
+  </ItemGroup>
+
 
 </Project>
