--- a/UI/WebStore/appsettings.json
+++ b/UI/WebStore/appsettings.json
@@ -64,5 +64,6 @@
     }
   },
   "AllowedHosts": "*",
-  "WebApiURL": "http://localhost:5001"
+  "WebApiURL": "http://localhost:5001",
+  "PageSize": 3 
 }
